manifests/front/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: portfolio
  labels:
    app: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      namespace: portfolio
      labels:
        app: portfolio
    spec:
      containers:
        - name: frontend
          image: ghcr.io/adaptive-alexander/portfolio-frontend:v0.1.1
          ports:
            - containerPort: 3000
              protocol: TCP
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
            successThreshold: 2
            failureThreshold: 10
            httpGet:
              scheme: HTTP
              port: 3000
              path: /
