manifests/front/service.yml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: portfolio
  labels:
    app: portfolio
  annotations:
    cloud.google.com/backend-config: '{"default": "portfolio-backendconfig"}'
spec:
  type: NodePort
  selector:
    app: portfolio
  ports:
  - port: 80
    targetPort: 3000
